--- a/manifest.json
+++ b/manifest.json
@@ -2,18 +2,31 @@
   "manifest_version": 2,
   "name": "Messenger Assistant",
   "version": "0.1",
-  "content_scripts": [
-  {
+  "content_scripts": [{
     "matches": [
       "https://www.messenger.com/*"
     ],
-    "js": [ "dependencies/moment.min.js", "dependencies/jquery-3.3.1.min.js", "dependencies/chartjs-2.8.0.js", "parse.js", "gen_charts.js", "reminders.js", "convo.js"],
-    "css": ["convo.css"]
+    "js": [ "dependencies/moment.min.js",
+            "dependencies/jquery-3.3.1.min.js",
+            "dependencies/chartjs-2.8.0.js",
+            "parse.js",
+            "gen_charts.js",
+            "convo.js",
+            "extensions/reminders/script.js",
+            "extensions/emojis/script.js"],
+    "css": ["convo.css",
+            "extensions/reminders/style.css",
+            "extensions/emojis/style.css"]
   }],
   "browser_action": {
   },
+  "background": {
+    "scripts": ["network.js"]
+  },
   "web_accessible_resources": [
-    "convo.html"
+    "convo.html",
+    "extensions/reminders/index.html",
+    "extensions/emojis/index.html"
   ],
   "permissions":[
     "storage",
