moved character count into its own extension and refactored how observers are handled during init and on mutation events
moved character count into its own extension and refactored how observers are handled during init and on mutation events

removed debugger

--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,12 @@
             "dependencies/jquery-3.3.1.min.js",
             "dependencies/chartjs-2.8.0.js",
             "parse.js",
-            "gen-charts.js",
-            "convo.js",
+            "main.js",
+            "extensions.js",
             "extensions/character-count/script.js",
             "extensions/reminders/script.js",
             "extensions/emojis/script.js"],
-    "css": ["convo.css",
+    "css": ["main.css",
             "extensions/character-count/style.css",
             "extensions/reminders/style.css",
             "extensions/emojis/style.css"]
@@ -26,7 +26,7 @@
     "scripts": ["network.js"]
   },
   "web_accessible_resources": [
-    "convo.html",
+    "main.html",
     "extensions/character-count/index.html",
     "extensions/reminders/index.html",
     "extensions/emojis/index.html"
