--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
     "js": [ "dependencies/moment.min.js",
             "dependencies/jquery-3.3.1.min.js",
             "dependencies/chartjs-2.8.0.js",
+            "settings.js",
             "dev-network.js",
             "parse.js",
             "main.js",
